# mail_triage

./: Dockerfile  README.md  app.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  uv.lock.txt
server/: app.py
